third_party/move/move-compiler-v2/tests/lambda/inline-parity/shadowing_unused.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::quux` has a function parameter:
  ┌─ tests/lambda/inline-parity/shadowing_unused.move:4:16
  │
4 │     public fun quux(f:|u64, u64|, _z: u64) {
  │                ^^^^ - Parameter `f` has function-valued type `|(u64, u64)|`.

error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo` has a function parameter:
   ┌─ tests/lambda/inline-parity/shadowing_unused.move:10:16
   │
10 │     public fun foo(f:|u64, u64|, z: u64) {
   │                ^^^ - Parameter `f` has function-valued type `|(u64, u64)|`.
